# hackerman

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  utils.rs
src/games/: ascii_art.rs  binary_numbers.rs  game_widget.rs  main_screen_widget.rs  mod.rs  settings.rs  weather_main.rs
