[package]
name = "hackerman"
version = "0.1.0"
description = "A collection of little games in a retro hacking theme"
authors = ["William Raendchen <william.raendchen@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
pretty_assertions = "1.4.1"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.9.1"